arm_none_eabi_toolchain("arm_none_eabi_gcc") {
}

target_flags = [
  "-mcpu=cortex-m3",
  "-mthumb",
  "-mfloat-abi=soft",
]

config("project_config") {
  asmflags = target_flags + [
               "-fmessage-length=0",
               "-fdiagnostics-color",
               "-fno-common",
               "-x",
               "assembler-with-cpp",
             ]
  cflags = target_flags + [
             "-fmessage-length=0",
             "-fdiagnostics-color",
             "-fno-common",
             "-ffreestanding",
             "-ffunction-sections",
             "-fdata-sections",

             "-Wall",
             "-Wextra",
             "-Wnull-dereference",
             "-Wstringop-overflow",
             "-Wdouble-promotion",
             "-Wshadow",
             "-Wlogical-op",
             "-Wredundant-decls",

             "-g",
             "-Os",
           ]
  ldflags = target_flags + [
              # "-nostdlib",
              "-nostartfiles",

              # "--specs=nosys.specs",
              "--specs=nano.specs",

              "-Wl,--gc-sections",
              "-Wl,--print-memory-usage",
              "-Wl,--no-warn-rwx-segments",
            ]
}

group("default") {
  if (defined(project_profile) && project_profile == "boot") {
    deps = [ "//src/bootloader/:default" ]
  } else {
    deps = [ "//src/application/:default" ]
  }
}
