buildconfig = "//BUILDCONFIG.gn"
script_executable = "python3"

default_args = {
  project_name = "demo_stm32f103"
  project_profile = "boot"

  import("//profile/common.gni")

  # mds_kernel
  mds_log_build_level = "MDS_LOG_LEVEL_INFO"
  mds_assert_enable = false
  mds_library_miniable = false

  mds_clock_tick_freq_hz = 1000

  mds_core_arch = "cortex-m/thumbv7em"
  mds_core_backtrace_depth = 6

  mds_kernel_thread_priority_max = 0
  mds_kernel_hook_enable = false
  mds_kernel_stats_enable = false
  mds_kernel_timer_disable = true
}
