buildconfig = "//BUILDCONFIG.gn"
script_executable = "python3"

default_args = {
  project_name = "demo_stm32f103"
  project_profile = "boot"

  import("//profile/common.gni")

  # mds_kernel
  mds_log_build_level = "MDS_LOG_LEVEL_INFO"
  mds_log_print_level = "MDS_LOG_LEVEL_INFO"
  mds_log_assert_enable = false
  mds_log_compress_args_nums = 7

  mds_clock_tick_freq_hz = 1000

  mds_core_architecture = "cortex-m/thumbv7em"
  mds_core_backtrace_depth = 6

  mds_kernel_thread_priority_max = 0
  mds_kernel_hook_enable = false
  mds_kernel_stats_enable = false
  mds_timer_independent = false

  # mds_component_boot
  mds_boot_upgrade_retry = 3
  mds_boot_upgrade_size = 1024
  mds_boot_upgrade_alloc = false
  mds_boot_upgrade_hash = true

  mds_boot_with_copy = true
  mds_boot_with_lzma = true
  mds_boot_lzma_read_size = 1024
  mds_boot_lzma_write_size = 1024
  mds_boot_lzma_dict_size = 4096
  mds_boot_lzma_probs_size = 10112
}
