declare_args() {
  mds_build_dir = getenv("MDS_BUILD_DIR")

  project_name = "demo_stm32f103"
  project_profile = ""
  project_version = ""
}

# package
import("${mds_build_dir}/package.gni")

# toolchain
import("${mds_build_dir}/toolchains/arm_none_eabi_gcc.gni")
import("${mds_build_dir}/toolchains/gcc.gni")
if (project_profile == "test") {
  set_default_toolchain("//src/test/:gcc")
} else {
  set_default_toolchain("//:arm_none_eabi_gcc")
}

# project
set_defaults("source_set") {
  configs = [ "//:project_config" ]
}

set_defaults("static_library") {
  configs = [ "//:project_config" ]
}

set_defaults("shared_library") {
  configs = [ "//:project_config" ]
}

set_defaults("executable") {
  configs = [ "//:project_config" ]
}
