pkggroup("drv_chip_gd32e11x") {
}

pkggroup("mds_component/lpc") {
}

config("board_inc") {
  include_dirs = [ "./" ]
}

source_set("board_src") {
  sources = [
    "board_clock.c",
    "board_flash.c",

    # "board_gpio.c",
  ]

  deps = [ "//../../public/brds/:public_board" ]

  public_configs = [ ":board_inc" ]

  public_deps = [
    ":drv_chip_gd32e11x",
    ":mds_component/lpc",
  ]
}
