pkggroup("stm32f1xx_device") {
  deps = [ ":stm32f1xx_system" ]
}

pkggroup("drv_chip_stm32f1xx") {
}

pkggroup("mds_component/lpc") {
}

source_set("board_src") {
  sources = [
    "board_clock.c",
    "board_gpio.c",
  ]

  public_deps = [
    ":drv_chip_stm32f1xx",
    ":mds_component/lpc",
    ":stm32f1xx_device",
  ]
}
