buildconfig = "//BUILDCONFIG.gn"
script_executable = "python3"

default_args = {
  project_name = "demo_stm32f103"
  project_profile = "boot"

  # stm32f1xx_device
  stm32f1xx_device_devdef = "STM32F103xB"

  # stm32f1xx_hal_driver
  stm32f1xx_hal_driver_confdir = rebase_path("//src/board")

  # mds_chip_stm32f1xx
  drv_chip_stm32f1xx_without_interrupt = true

  # mds_kernel
  mds_pkgver = "develop"
  mds_log_build_level = "MDS_LOG_LEVEL_INFO"

  mds_kernel_object_name_size = 15
  mds_kernel_use_assert = true
  mds_kernel_lib_miniable = false

  mds_kernel_core_arch = "cortex-m/thumbv7em"
  mds_kernel_core_backtrace = true
  mds_kernel_hook_enable = false
  mds_kernel_memheap_stats = true
  mds_kernel_systick_freq_hz = 1000

  mds_kernel_with_sys = true
}
